# robosub-ros2

./: .flake8  .gitignore  99-robosub-ros2.rules  README.md  SCRIPTS.md  SETUP.md  build.sh  completed_setup  daf  docker-build.sh  docker-compose-no-git.yml  docker-compose-robot.yml  docker-compose-with-git.yml  docker-compose.yml  ivc_log.txt  ivc_log_third_chance.txt  lint.py  pyproject.toml  robot_names  setup.cfg  sonar_sweep_Time(nanoseconds=1760823477543817520, clock_type=ROS_TIME).npy  venv.sh
core/src/custom_msgs/: CMakeLists.txt  package.xml
core/src/custom_msgs/msg/: CVObject.msg  ControlTypes.msg  DVLRaw.msg  Memory.msg  ModemDiagnosticReport.msg  ModemStatus.msg  PIDAxesInfo.msg  PIDDerivativeType.msg  PIDGain.msg  PIDInfo.msg  PIDTerms.msg  PWMAllocs.msg  RectInfo.msg  RemoteLaunchInfo.msg  RunningNode.msg  ServoAngleArray.msg  SimObject.msg  SimObjectArray.msg  SonarSweepRequest.msg  SonarSweepResponse.msg  SystemUsage.msg  TaskUpdate.msg  ThrusterAllocs.msg
core/src/custom_msgs/srv/: ConnectUSBCamera.srv  EnableModel.srv  GetRunningNodes.srv  ModemWrite.srv  SendModemCommand.srv  SendModemMessage.srv  SetContinuousServo.srv  SetControlTypes.srv  SetDiscreteServo.srv  SetModemSettings.srv  SetPIDGains.srv  SetPowerScaleFactor.srv  SetServo.srv  SetStaticPower.srv  SonarSweepRequest.srv  StartLaunch.srv  StopLaunch.srv
core/src/drc_core/: package.xml  setup.cfg  setup.py
core/src/drc_core/drc_core/: drc_node.py
onboard/src/controls/: CMakeLists.txt  README.md  package.xml
onboard/src/controls/config/: crush.yaml  cthulhu.yaml  oogway.yaml
onboard/src/controls/controls/: controls.cpp
onboard/src/controls/data/: crush_wrench.csv  crush_wrench_pinv.csv  cthulhu_wrench.csv  cthulhu_wrench_pinv.csv  oogway_wrench.csv  oogway_wrench_pinv.csv
onboard/src/controls/include/: controls.hpp  controls_types.hpp  controls_utils.hpp  pid_manager.hpp
onboard/src/controls/launch/: controls.launch  controls_gdb.launch  controls_gdbserver.xml  controls_valgrind.launch  controls_valgrind.xml
onboard/src/controls/scripts/: compute_wrench_matrix.py
onboard/src/controls/src/: controls.cpp  controls_utils.cpp  drc_pid.cpp  pid_manager.cpp  thruster_allocator.cpp
onboard/src/cv/: README.md  package.xml  setup.py
onboard/src/cv/config/: crush.yaml  oogway.yaml  oogway_shell.yaml  usb_cameras.yaml
onboard/src/cv/cv/: bin_detector.py  blue_rectangle_detector.py  buoy_detector.py  buoy_detector_contour_matching.py  config.py  correct.py  depthai_camera_connect.py  depthai_mono_detection.py  depthai_publish_save_streams.py  depthai_spatial_detection.py  depthai_usb_detection.py  gpu_stat_test.py  hsv_filter.py  hsv_filter_torpedos.py  hsv_pink_bin_bottom.py  hsv_pink_bin_front.py  hsv_red_bin.py  hsv_torpedo_targets.py  image_tools.py  inference_node.py  lane_marker_detector.py  monitor_usage.py  path_marker_detector.py  pink_bins_detector.py  torpedo_target_detector.py  usb_camera.py  usb_camera_connect.py  usb_camera_connect_all.py  utils.py
onboard/src/cv/launch/: bin_detector.launch  bin_detector.xml  blue_rectangle_detector.launch  buoy_detector.xml  buoy_detector_contour_matching.launch  camera_hard_reset.launch  camera_hard_reset.xml  camera_test_connect.launch  camera_test_connect.xml  cv.launch  cv.launch.py  cv.xml  depthai_camera_connect.launch  depthai_camera_connect.xml  depthai_mono_detection.launch  depthai_mono_detection.xml  depthai_publish_save_streams.launch  depthai_publish_save_streams.xml  depthai_service_model.launch  depthai_simulate_detection.launch  depthai_simulate_detection.xml  depthai_spatial_detection.launch  depthai_spatial_detection.xml  depthai_usb_detection.xml  gpu_stat_test.xml  hsv_filter_torpedos.xml  hsv_pink_bin_bottom.xml  hsv_pink_bin_front.xml  hsv_red_bin.xml  hsv_torpedo_targets.xml  lane_marker_detector.xml  monitor_usage.xml  path_marker_detector.launch  path_marker_detector.xml  ping_host.launch  ping_host.xml  pink_bins_detector.launch  pink_bins_detector.xml  test_images.launch  test_images.xml  (+8 more)
onboard/src/cv/models/: depthai_models.yaml  models.yaml
onboard/src/cv/scripts/: bin_detector.py  depthai_mono_detection.py  depthai_spatial_detection.py
onboard/src/cv/test/: test.py
onboard/src/cv/udev/: 99-usb-camera.rules
onboard/src/dvl_pathfinder/: CMakeLists.txt  package.xml
onboard/src/dvl_pathfinder/config/: oogway_shell.yaml
onboard/src/dvl_pathfinder/launch/: dvl_pathfinder.xml
onboard/src/dvl_pathfinder/src/: dvl_pathfinder.cpp
onboard/src/dvl_wayfinder/: package.xml  setup.cfg  setup.py
onboard/src/dvl_wayfinder/config/: crush.yaml
onboard/src/dvl_wayfinder/dvl_wayfinder/: dvl_wayfinder.py
onboard/src/dvl_wayfinder/launch/: dvl_wayfinder.xml
onboard/src/offboard_comms/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
onboard/src/offboard_comms/config/: crush.yaml  oogway-shell.yaml  oogway.yaml  oogway_shell.yaml
onboard/src/offboard_comms/launch/: dvl.xml  dvl_pathfinder.xml  dvl_pathfinder_raw.xml  dvl_wayfinder.xml  gyro.xml  modem.xml  offboard_comms.launch.py  offboard_comms.xml  peripheral.xml  thrusters.xml
onboard/src/offboard_comms/offboard_comms/: arduino.py  dvl_pathfinder_raw.py  dvl_pathfinder_to_odom.py  dvl_raw.py  dvl_to_odom.py  dvl_wayfinder.py  gyro.py  modem.py  peripheral.py  peripheral_sensors.py  serial_node.py  serial_republisher_node.py  servo_wrapper.py  test_thrusters.py  thrusters.py
onboard/src/system_utils/: README.md  package.xml  setup.py
onboard/src/system_utils/launch/: record_bag.launch  record_bag.xml  remote_launch.launch  sensor_check.launch  system_info_pub.xml  system_pub.launch  system_utils.launch  system_utils.xml  topic_transforms.launch  topic_transforms.xml
onboard/src/system_utils/system_utils/: record_bag.py  system_info_publisher.py  topic_transforms.py
onboard/src/task_planning/: README.md  package.xml  setup.cfg  setup.py
onboard/src/task_planning/launch/: task_runner.launch  task_runner.xml
onboard/src/task_planning/task_planning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+345 files in other folders)
