<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cv</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <!--Used pip install depthai \-\-break-system-packages, please add to docker file?
  -->

  <depend>sensor_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>resource_retriever</depend>
  <depend>depthai</depend>

  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-opencv</exec_depend>

  <exec_depend> rclpy </exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
