<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dvl_wayfinder</name>
  <version>0.0.0</version>
  <description>Obtain information from the Wayfinder DVL and publish it.</description>
  <maintainer email="hello@duke-robotics.com">Duke Robotics</maintainer>
  <license>MIT</license>

  <depend>custom_msgs</depend>
  <depend>resource_retriever</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
