<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_comms</name>
  <version>0.0.0</version>
  <description>Obtain sensor information from Arduinos and send thruster commands</description>
  <maintainer email="hello@duke-robotics.com">Duke Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
